<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StatisticsActivity">

    <TextView
        android:id="@+id/below20header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/below20header"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/above80header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/above80header"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/below20body" />

    <TextView
        android:id="@+id/below20body"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/below20none"
        app:layout_constraintEnd_toEndOf="@+id/below20header"
        app:layout_constraintStart_toStartOf="@+id/below20header"
        app:layout_constraintTop_toBottomOf="@+id/below20header" />

    <TextView
        android:id="@+id/above80body"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/above80none"
        app:layout_constraintEnd_toEndOf="@+id/below20header"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/below20header"
        app:layout_constraintTop_toBottomOf="@+id/above80header" />
</androidx.constraintlayout.widget.ConstraintLayout>