<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AlertEditor">

    <TextView
        android:id="@+id/alert1label"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/one"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alert2label"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/two"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert1label" />

    <TextView
        android:id="@+id/alert3label"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/three"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert2label" />

    <TextView
        android:id="@+id/alert4label"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/four"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert3label" />

    <TextView
        android:id="@+id/alert5label"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/five"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert4label" />

    <TextView
        android:id="@+id/alert6label"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/six"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert5label" />

    <EditText
        android:id="@+id/alert1percentEdit"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/alert1label"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/alert2percentEdit"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/alert2label"
        app:layout_constraintTop_toBottomOf="@+id/alert1percentEdit" />

    <EditText
        android:id="@+id/alert3percentEdit"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/alert3label"
        app:layout_constraintTop_toBottomOf="@+id/alert2percentEdit" />

    <EditText
        android:id="@+id/alert4percentEdit"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/alert4label"
        app:layout_constraintTop_toBottomOf="@+id/alert3percentEdit" />

    <EditText
        android:id="@+id/alert5percentEdit"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/alert5label"
        app:layout_constraintTop_toBottomOf="@+id/alert4percentEdit" />

    <EditText
        android:id="@+id/alert6percentEdit"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/alert6label"
        app:layout_constraintTop_toBottomOf="@+id/alert5percentEdit" />

    <TextView
        android:id="@+id/percent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/keyword_percent"
        app:layout_constraintBottom_toBottomOf="@+id/alert1percentEdit"
        app:layout_constraintStart_toEndOf="@+id/alert1percentEdit"
        app:layout_constraintTop_toTopOf="@+id/alert1percentEdit" />

    <TextView
        android:id="@+id/percent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/keyword_percent"
        app:layout_constraintBottom_toBottomOf="@+id/alert2percentEdit"
        app:layout_constraintStart_toEndOf="@+id/alert2percentEdit"
        app:layout_constraintTop_toTopOf="@+id/alert2percentEdit" />

    <TextView
        android:id="@+id/percent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/keyword_percent"
        app:layout_constraintBottom_toBottomOf="@+id/alert3percentEdit"
        app:layout_constraintStart_toEndOf="@+id/alert3percentEdit"
        app:layout_constraintTop_toTopOf="@+id/alert3percentEdit" />

    <TextView
        android:id="@+id/percent4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/keyword_percent"
        app:layout_constraintBottom_toBottomOf="@+id/alert4percentEdit"
        app:layout_constraintStart_toEndOf="@+id/alert4percentEdit"
        app:layout_constraintTop_toTopOf="@+id/alert4percentEdit" />

    <TextView
        android:id="@+id/percent5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/keyword_percent"
        app:layout_constraintBottom_toBottomOf="@+id/alert5percentEdit"
        app:layout_constraintStart_toEndOf="@+id/alert5percentEdit"
        app:layout_constraintTop_toTopOf="@+id/alert5percentEdit" />

    <TextView
        android:id="@+id/percent6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/keyword_percent"
        app:layout_constraintBottom_toBottomOf="@+id/alert6percentEdit"
        app:layout_constraintStart_toEndOf="@+id/alert6percentEdit"
        app:layout_constraintTop_toTopOf="@+id/alert6percentEdit" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/alert1switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/keyword_enabled"
        app:layout_constraintBottom_toBottomOf="@+id/alert1percentEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alert1percentEdit" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/alert2switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/keyword_enabled"
        app:layout_constraintBottom_toBottomOf="@+id/alert2percentEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alert2percentEdit" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/alert3switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/keyword_enabled"
        app:layout_constraintBottom_toBottomOf="@+id/alert3percentEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alert3percentEdit" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/alert4switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/keyword_enabled"
        app:layout_constraintBottom_toBottomOf="@+id/alert4percentEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alert4percentEdit" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/alert5switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/keyword_enabled"
        app:layout_constraintBottom_toBottomOf="@+id/alert5percentEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alert5percentEdit" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/alert6switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/keyword_enabled"
        app:layout_constraintBottom_toBottomOf="@+id/alert6percentEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alert6percentEdit" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="180dp"
        android:text="@string/keyword_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/keyword_save"
        app:layout_constraintBottom_toBottomOf="@+id/resetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resetButton" />

</androidx.constraintlayout.widget.ConstraintLayout>